# TinyRPC

./: CMakeLists.txt  README.md
Server/: LocalRegistry.cpp  TinyRPCServer.cpp
TinyRPCClient/: CMakeLists.txt
TinyRPCClient/conf/: registry.properties
TinyRPCClient/include/TinyRPC/client/: ConnectionPool.hpp  QuickClient.hpp
TinyRPCClient/test/: main.cpp
TinyRPCClient/test/app/: IntToString.cpp
TinyRPCRegistry/: CMakeLists.txt
TinyRPCRegistry/src/: main.cpp
TinyRPCServer/: CMakeLists.txt  readme
TinyRPCServer/conf/: server.properties
TinyRPCServer/include/TinyRPC/server/: LocalRegistry.hpp  QuickImpl.hpp
TinyRPCServer/src/: main.cpp
TinyRPCServer/src/app/: IntToString.cpp
TinyRPCService/include/TinyRPC/: QuickService.hpp
conf/Server/: registry.properties
conf/TinyRPCServer/: rpcServer.properties
include/SampleServices/: IntToString.hpp
include/TinyRPC/: Cerealization.hpp  ServiceMacro.hpp
include/TinyRPC/Client/: RPCClientMacro.hpp  RPCClientPool.hpp
include/TinyRPC/Registry/: TinyRPCRegistry.hpp
include/TinyRPC/Server/: Cerealization.hpp  LocalRegistry.hpp  TinyRPCServer.hpp
include/util/: Config.hpp  Singleton.hpp
service_example/: CMakeLists.txt  readme  test.cpp
service_example/include/TinyRPC/service_example/: IntToString.hpp
src/TinyRPC/Client/: RPCClientPool.cpp
src/TinyRPC/Registry/: TinyRPCRegistry.cpp
src/TinyRPC/Server/: TinyRPCServer.cpp
test/TinyRPCClient/SampleServices/: test.cpp
test/TinyRPCRegistry/: test.cpp
test/TinyRPCServer/: test.cpp
test/TinyRPCServer/SampleServices/: IntToString.cpp
